--- a/dimabe_quotation_report/views/report.xml
+++ b/dimabe_quotation_report/views/report.xml
@@ -7,8 +7,8 @@
             name="dimabe_quotation_report.dimabe_quotation_custom_report"
         />
         <template id="dimabe_quotation_custom_report">
-            <t t-call="report.html_container">
-                <t t-call="report.external_layout">
+            <t t-call="web.html_container">
+                <t t-call="web.external_layout">
                     <div class="header">
                         <h1>Cabecera personalizada del informe</h1>
                     </div>
